<resources>
    <string name="app_name">GithubAPI</string>
    <string name="dummy_user_name">User name</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="template_repos">Public repos : %1$s</string>
    <string name="template_gists">Public gists : %1$s</string>
    <string name="template_location">Location :%1$s</string>
    <string name="biography">Biography</string>
    <string name="user_info">User Info</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
</resources>
